--- a/go.html
+++ b/go.html
@@ -3,6 +3,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Restaurant · Loader</title>
+
+<!-- Netzwerkwarmup für das Ziel -->
+<link rel="dns-prefetch" href="//script.google.com">
+<link rel="preconnect" href="https://script.google.com" crossorigin>
+<link rel="prefetch" href="https://script.google.com" as="document" crossorigin>
+
 <style>
   :root{
     --bg1:#0c0f17; --bg2:#0a0e15; --card:#0e1524cc; --stroke:#1f2a37; --muted:#9aa4b2; --fg:#e6eaf0;
@@ -38,20 +44,20 @@
   .ramen-steam path:nth-child(3){animation-delay:.5s}
   @keyframes steam{0%{stroke-dashoffset:0;opacity:.2}50%{opacity:1}100%{stroke-dashoffset:-160;opacity:.2}}
   .ramen-bowl{fill:none;stroke:#3b4a5e;stroke-width:2}
-  /* Taco: Shell rotiert sanft, Füllung bounct */
+  /* Taco */
   .taco-shell{fill:none;stroke:var(--accent);stroke-width:2;filter:drop-shadow(0 0 10px rgba(34,197,94,.25))}
   .taco-fill{fill:#2dd4bf;transform-origin:32px 40px;animation:fillbounce 1.3s ease-in-out infinite}
   @keyframes fillbounce{50%{transform:translateY(-2px)}}
   .taco-rot{transform-origin:32px 36px;animation:trot 3.4s ease-in-out infinite}
   @keyframes trot{50%{transform:rotate(-8deg)}}
-  /* Fries: Stäbchen wachsen als „Progress“ + warmer Glow */
+  /* Fries */
   .fries path{stroke:var(--accent);stroke-width:3;stroke-linecap:round}
   .fries .f{transform-origin:8px 16px;animation:up 1.2s ease-in-out infinite}
   .fries .f:nth-child(2){animation-delay:.15s}
   .fries .f:nth-child(3){animation-delay:.3s}
   @keyframes up{50%{transform:translateY(-3px)}}
   .box{fill:none;stroke:#3b4a5e;stroke-width:2}
-  /* ==== MAIN CONTENT (deine Seite) ==== */
+  /* ==== MAIN CONTENT ==== */
   main{min-height:100%;display:grid;place-items:center;padding:24px}
   .content{opacity:0;transform:translateY(6px);transition:opacity .4s ease, transform .4s ease}
   .content.show{opacity:1;transform:none}
@@ -146,23 +152,7 @@
   subtitle.textContent = copy.sub;
   note.textContent = copy.note;
 
-  // --- Progress: läuft pseudo bis 90%, finish erst nach window.load ---
-  let p = 0, finished = false;
-  const tick = setInterval(()=>{
-    if (!finished) {
-      p = Math.min(90, p + Math.ceil(6 + Math.random()*10)); // bis 90%
-    } else {
-      p = Math.min(100, p + 4 + Math.floor(Math.random()*8)); // dann zügig auf 100
-    }
-    bar.style.width = p + '%';
-    badge.textContent = p + '%';
-  }, 180);
-
-  // Hilfen für robusten Paint vor Navigation (Chrome/Android)
-  const nextFrame = () => new Promise(r => requestAnimationFrame(()=>r()));
-  async function ensurePaintedFrames(n=2){ while(n--) await nextFrame(); }
-
-  // Redirect-Ziel (wie bei dir genutzt)
+  // ---------------- Netzwerk-Warmup & URL-Bau ----------------
   const VENUE = params.get('venue_id') || 'crunchclub-zwickau';
   const TOKEN = params.get('token') || '';
   const APP  = 'https://script.google.com/macros/s/AKfycbzdDii900AOXGpJcp1kMnbV6Hk7VwMBMVHFKKceldOtGbamGqXRgzhR341mEDeCgrQ/exec';
@@ -170,8 +160,9 @@
   function getCID(){
     try{
       let id = localStorage.getItem('cc_client_id');
-      if(!id){ id = (crypto && crypto.randomUUID) ? crypto.randomUUID()
-              : String(Date.now())+'-'+Math.random().toString(16).slice(2);
+      if(!id){
+        id = (crypto && crypto.randomUUID) ? crypto.randomUUID()
+            : String(Date.now())+'-'+Math.random().toString(16).slice(2);
         localStorage.setItem('cc_client_id', id);
       }
       return id;
@@ -179,8 +170,31 @@
   }
   const cid = encodeURIComponent(getCID());
   const ua  = encodeURIComponent(navigator.userAgent || '');
+  const targetUrl = `${APP}?venue_id=${encodeURIComponent(VENUE)}&token=${encodeURIComponent(TOKEN)}&client_id=${cid}&ua=${ua}`;
 
-  // Wenn alles geladen ist → Progress beenden, Loader ausblenden, redirect
+  // Warmup so früh wie möglich (ohne CORS-Ansprüche)
+  if (TOKEN) {
+    // Versuch 1: Prefetch via fetch (no-cors)
+    try { fetch(targetUrl, { mode:'no-cors', cache:'no-store', keepalive:true }); } catch(e){}
+    // Versuch 2: Fallback über Image-Trick (startet GET)
+    try { const img = new Image(); img.referrerPolicy='no-referrer'; img.src = targetUrl; } catch(e){}
+  }
+
+  // ---------------- Progress: bis 90% simulieren, finish bei load ----------------
+  let p = 0, finished = false;
+  const tick = setInterval(()=>{
+    if (!finished) {
+      p = Math.min(90, p + Math.ceil(6 + Math.random()*10)); // bis 90%
+    } else {
+      p = Math.min(100, p + 8 + Math.floor(Math.random()*10)); // zügig auf 100
+    }
+    bar.style.width = p + '%';
+    badge.textContent = p + '%';
+  }, 180);
+
+  // ---------- Nach vollständigem Laden: Fade und Navigation PARALLEL ----------
+  const nextFrame = () => new Promise(r => requestAnimationFrame(()=>r()));
+
   window.addEventListener('load', async () => {
     if(!TOKEN){
       clearInterval(tick);
@@ -192,29 +206,25 @@
 
     finished = true;
 
-    // kurze Warte, bis 100% erreicht sind
-    const waitToFull = setInterval(()=>{
+    // Warten bis 100 erreicht, aber nicht künstlich bremsen
+    const toFull = setInterval(()=>{
       if(p >= 100){
-        clearInterval(waitToFull);
-        proceed();
+        clearInterval(toFull);
       }
-    }, 60);
-  }, { once:true });
+    }, 50);
 
-  async function proceed(){
-    // Sicherstellen, dass min. ein Frame gerendert wurde (gegen „Black before nav“)
-    await ensurePaintedFrames(2);
+    // 1) Sicher einen Frame rendern, damit der Loader sichtbar bleibt
+    await nextFrame();
 
-    // sanftes Ausblenden
+    // 2) Loader ausfaden (sichtbares Feedback)
     pre.classList.add('hide');
 
-    // nach Fade redirect
-    setTimeout(()=>{
-      const url = `${APP}?venue_id=${encodeURIComponent(VENUE)}&token=${encodeURIComponent(TOKEN)}&client_id=${cid}&ua=${ua}`;
-      location.replace(url);
-    }, 620); // Deckung mit .6s Fade
-  }
+    // 3) Navigation sofort anstoßen (parallel zum Fade) – Page beginnt zu laden
+    //    requestAnimationFrame sorgt für einen sichtbaren Start des Fades auf Chrome/Android
+    requestAnimationFrame(()=>{ location.replace(targetUrl); });
+  }, { once:true });
+
 })();
 </script>
 </body>
-</html> 
+</html>
